# terminalRPG

./: .editorconfig  App.cpp  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
cmake/: boost.cmake  gtest.cmake  qt.cmake
include/: App.h  BaseScene.h  BattleController.h  BattleScene.h  BattleWindow.h  CMakeLists.txt  Chara.h  CharaStatusWindow.h  Command.h  CommandMenu.h  Controller.h  ControllerId.h  ControllerManager.h  Define.h  EastWidthAsian.h  EventScene.h  Fps.h  KeyDefine.h  KeyboardManager.h  MapController.h  MapModel.h  MapObject.h  MapScene.h  MapWindow.h  MenuScene.h  Point.h  SceneList.h  SceneMgr.h  Singleton.h  StartController.h  StartScene.h  StartWindow.h  Status.h  StringUtil.h  SubTask.h  Task.h  TermMsg.h  TerminalWindow.h  Window.h  WindowController.h  (+7 more)
lib/: CMakeLists.txt
lib/battle/: BattleWindow.cpp  CMakeLists.txt  CharaStatusWindow.cpp  CommandMenu.cpp
lib/chara/: CMakeLists.txt  Chara.cpp  Chara.h  Status.cpp
lib/command/: CMakeLists.txt  Command.cpp
lib/manager/: BaseScene.cpp  BattleController.cpp  BattleScene.cpp  CMakeLists.txt  Controller.cpp  ControllerManager.cpp  EventScene.cpp  Fps.cpp  KeyboardManager.cpp  MapScene.cpp  MenuScene.cpp  SceneMgr.cpp  StartController.cpp  StartScene.cpp  SubTask.cpp  Task.cpp
lib/map/: CMakeLists.txt  MapController.cpp  MapModel.cpp  MapObject.cpp
lib/util/: CMakeLists.txt  EastWidthAsian.cpp  Point.cpp  StringUtil.cpp  TermMsg.cpp  TerminalWindow.cpp  awesome.cpp  east_width_asian.cpp  string_util.cpp  term_msg.cpp  terminalWindow.cpp  terminal_window.cpp
lib/window/: CMakeLists.txt  MapWindow.cpp  StartWindow.cpp  Window.cpp  WindowController.cpp
resources/: map.txt
test/: CMakeLists.txt
test/add/: CMakeLists.txt  add_test.cpp  main.cpp
test/battle/: CMakeLists.txt  main.cpp
test/boost/: CMakeLists.txt  main.cpp  timer.cpp  unique.cpp
test/command/: CMakeLists.txt  main.cpp
test/curses/: CMakeLists.txt  anime.cpp  main.cpp  map.cpp  window.cpp
test/manager/: CMakeLists.txt  FpsTest.cpp  FpsTest.h  SceneMgrTest.cpp  keybord.cpp  keybord.h  keytest.cpp
test/map/: CMakeLists.txt  main.cpp
test/msg/: CMakeLists.txt  main.cpp
test/player/: CMakeLists.txt  main.cpp
test/utf8/: CMakeLists.txt  main.cpp
